--- a/style.css
+++ b/style.css
@@ -1,16 +1,19 @@
 #container
 {
 	margin: 0 30px;
-	background: #fff;
+	background-color: darkcyan;
 }
 
 #header
 {
-	background: #ccc;
+	background-color:darkslategrey;
 	padding: 20px;
 }
 
-#header h1 { margin: 0; }
+#header h1 { margin: 0; 
+ text-align:center;
+color:#b8d9d0;
+}
 
 #navigation
 {
@@ -77,19 +80,22 @@
 	border-radius: 18px;
 	-webkit-box-shadow: 0px 0px 6px #000000;
 	box-shadow: 0px 0px 6px #000000;
-	background-image: -webkit-gradient(linear, left top, right top, from(#d6e1ff), to(#dbffe7));
+	background-image: -webkit-gradient(linear, left top, right top, from(#d6e1ff), to(#b8d9d));
 	background-image: -webkit-linear-gradient(left, #d6e1ff, #dbffe7);
 	background-image: linear-gradient(left, #d6e1ff, #dbffe7);
 	-webkit-background-clip: padding-box;
 	background-clip: padding-box;
 	opacity: 0.83;
 }
-
+a {
+    color: darkgreen;
+}
 #footer
 {
 	clear: both;
-	background: #ccc;
+	background-color: lightcyan;
 	text-align: right;
 	padding: 20px;
 	height: 1%;
+    color: darkslategray;
 }
